--- a/spring-framework/framework-bom/pom.xml
+++ b/spring-framework/framework-bom/pom.xml
@@ -22,8 +22,6 @@
     <url>https://github.com/spring-projects/spring-framework</url>
 
 
-
-
     <properties>
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -143,11 +141,11 @@
                 <artifactId>spring-oxm</artifactId>
                 <version>5.2.12.RELEASE</version>
             </dependency>
-<!--            <dependency>-->
-<!--                <groupId>org.springframework</groupId>-->
-<!--                <artifactId>spring-test</artifactId>-->
-<!--                <version>5.2.12.RELEASE</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>5.2.12.RELEASE</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-tx</artifactId>
@@ -176,5 +174,26 @@
 
         </dependencies>
     </dependencyManagement>
-
+    <repositories>
+        <repository>
+            <id>aliyunmaven</id>
+            <url>https://maven.aliyun.com/repository/public</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>aliyun-plugin</id>
+            <url>https://maven.aliyun.com/repository/spring-plugin/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
 </project>
