--- a/spring-framework/spring-test/pom.xml
+++ b/spring-framework/spring-test/pom.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+
+
+  <parent>
+    <groupId>org.springframework</groupId>
+    <artifactId>framework-parent</artifactId>
+    <version>5.2.12.RELEASE</version>
+    <relativePath>../framework-parent</relativePath>
+  </parent>
+
   <groupId>org.springframework</groupId>
   <artifactId>spring-test</artifactId>
   <version>5.2.12.RELEASE</version>
