--- a/spring-boot-tests/spring-boot-smoke-tests/pom.xml
+++ b/spring-boot-tests/spring-boot-smoke-tests/pom.xml
@@ -150,7 +150,7 @@
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
 				<executions>
@@ -172,7 +172,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
