--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-build</artifactId>
@@ -44,8 +44,9 @@
 				<module>spring-framework-maven</module>
 				<module>spring-boot-project</module>
 				<module>spring-debug</module>
+
 				<!-- Smoke tests are built via the invoker plugin -->
-				<module>spring-boot-tests</module>
+<!--				<module>spring-boot-tests</module>-->
 			</modules>
 		</profile>
 		<!-- M2E profile to allow easy import into Eclipse -->
@@ -157,7 +158,6 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-
 				<plugin>
 					<groupId>com.gradle</groupId>
 					<artifactId>gradle-enterprise-maven-extension</artifactId>
