--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 				</plugins>
 			</build>
 			<modules>
-				<module>spring-framework-maven</module>
+<!--				<module>spring-framework-maven</module>-->
 				<module>spring-boot-project</module>
 				<module>spring-debug</module>
 
