--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,15 @@
 	<properties>
 		<revision>2.2.14.BUILD-SNAPSHOT</revision>
 		<main.basedir>${basedir}</main.basedir>
+		<java.version>8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 
 	<modules>
-		<module>spring-parent</module>
-		<module>spring-framework-maven</module>
+		<module>spring-dependencies</module>
+<!--		<module>spring-framework-maven</module>-->
 		<module>spring-boot-project</module>
 		<module>spring-debug</module>
 
