--- a/spring-parent/pom.xml
+++ b/spring-parent/pom.xml
@@ -7,8 +7,9 @@
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-build</artifactId>
+		<artifactId>spring-dependencies</artifactId>
 		<version>${revision}</version>
+		<relativePath>../spring-dependencies</relativePath>
 	</parent>
 
 	<groupId>org.springframework.boot</groupId>
@@ -19,6 +20,9 @@
 	<properties>
 		<revision>2.2.14.BUILD-SNAPSHOT</revision>
 		<main.basedir>${basedir}</main.basedir>
+		<java.version>8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencyManagement>
@@ -28,16 +32,20 @@
 				<artifactId>hutool-all</artifactId>
 				<version>5.8.15</version>
 			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-framework-bom</artifactId>
-				<version>5.2.12.RELEASE</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>2.2.14.BUILD-SNAPSHOT</version>
-			</dependency>
+			<!--			<dependency>-->
+			<!--				<groupId>org.springframework</groupId>-->
+			<!--				<artifactId>spring-framework-bom</artifactId>-->
+			<!--				<version>5.2.12.RELEASE</version>-->
+			<!--			</dependency>-->
+
+
+			<!--			<dependency>-->
+			<!--				<groupId>org.springframework.boot</groupId>-->
+			<!--				<artifactId>spring-boot-dependencies</artifactId>-->
+			<!--				<version>2.2.14.BUILD-SNAPSHOT</version>-->
+			<!--				<type>pom</type>-->
+			<!--				<scope>import</scope>-->
+			<!--			</dependency>-->
 		</dependencies>
 
 
