--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,9 @@
 
 
 	<modules>
-		<module>spring-dependencies</module>
-		<module>spring-framework-maven</module>
-		<module>spring-boot-project</module>
-		<module>spring-debug</module>
+<!--		<module>spring-framework-maven</module>-->
+				<module>spring-boot-project</module>
+		<!--		<module>spring-debug</module>-->
 		<!--				<module>spring-boot-tests</module>-->
 	</modules>
 
