--- a/spring-boot-project/spring-boot-parent/pom.xml
+++ b/spring-boot-project/spring-boot-parent/pom.xml
@@ -322,11 +322,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
 				</plugin>
-				<plugin>
-					<groupId>org.basepom.maven</groupId>
-					<artifactId>duplicate-finder-maven-plugin</artifactId>
-					<version>1.3.0</version>
-				</plugin>
+<!--				<plugin>-->
+<!--					<groupId>org.basepom.maven</groupId>-->
+<!--					<artifactId>duplicate-finder-maven-plugin</artifactId>-->
+<!--					<version>1.3.0</version>-->
+<!--				</plugin>-->
 				<plugin>
 					<groupId>org.codehaus.cargo</groupId>
 					<artifactId>cargo-maven2-plugin</artifactId>
