--- a/spring-boot-project/spring-boot-starters/spring-boot-starter-test/pom.xml
+++ b/spring-boot-project/spring-boot-starters/spring-boot-starter-test/pom.xml
@@ -95,35 +95,35 @@
 	</dependencies>
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.basepom.maven</groupId>
-				<artifactId>duplicate-finder-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>duplicate-dependencies</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-						<configuration>
-							<exceptions>
-								<exception>
-									<conflictingDependencies>
-										<dependency>
-											<groupId>org.ow2.asm</groupId>
-											<artifactId>asm</artifactId>
-										</dependency>
-										<dependency>
-											<groupId>net.minidev</groupId>
-											<artifactId>accessors-smart</artifactId>
-										</dependency>
-									</conflictingDependencies>
-								</exception>
-							</exceptions>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.basepom.maven</groupId>-->
+<!--				<artifactId>duplicate-finder-maven-plugin</artifactId>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<id>duplicate-dependencies</id>-->
+<!--						<phase>validate</phase>-->
+<!--						<goals>-->
+<!--							<goal>check</goal>-->
+<!--						</goals>-->
+<!--						<configuration>-->
+<!--							<exceptions>-->
+<!--								<exception>-->
+<!--									<conflictingDependencies>-->
+<!--										<dependency>-->
+<!--											<groupId>org.ow2.asm</groupId>-->
+<!--											<artifactId>asm</artifactId>-->
+<!--										</dependency>-->
+<!--										<dependency>-->
+<!--											<groupId>net.minidev</groupId>-->
+<!--											<artifactId>accessors-smart</artifactId>-->
+<!--										</dependency>-->
+<!--									</conflictingDependencies>-->
+<!--								</exception>-->
+<!--							</exceptions>-->
+<!--						</configuration>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 </project>
